# symbolism

./: Cargo.toml  README.md  dump.wl  notation.wl  numbers.wl  tokens.json
src/: ast.rs  atomic.rs  attributes.rs  bigreal.rs  characters.rs  context.rs  curry.rs  data.rs  expression.rs  field.rs  lib.rs  list.rs  list_lazy.rs  nest.rs  number.rs  number_theory.rs  numeric_array.rs  pattern.rs  string_expression.rs  symbol.rs  symbols.json
