[package]
name = "symbolism"
version = "0.1.0"
authors = ["Ada Rosa <adrosa@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
nalgebra = {version = "*", features = ["sparse", "serde-serialize", "arbitrary"] }